# flickshare_android

./: .gitignore
flick_android/: settings.gradle.kts
flick_android/app/: build.gradle.kts
flick_android/app/src/main/: AndroidManifest.xml
flick_android/app/src/main/java/com/example/flickshare/: MainActivity.kt
flick_android/app/src/main/java/com/example/flickshare/jni/: RustBridge.kt
flick_android/app/src/main/java/com/example/flickshare/network/: AnnounceManager.kt  DiscoveryManager.kt
flick_android/app/src/main/java/com/example/flickshare/ui/theme/: Color.kt  Theme.kt  Type.kt
flick_android/app/src/main/res/values/: strings.xml  themes.xml
flick_rust/: Cargo.toml
flick_rust/src/: lib.rs
