[package]
name = "flick_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # This tells Rust to make a .so file for Android

[dependencies]
jni = "0.21" # The bridge between Rust and Android

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization (removes unused code)
codegen-units = 1   # Better optimization, slower build
panic = "abort"
